--- a/fw/stm32/zumo_tb/zumo_tb.ioc
+++ b/fw/stm32/zumo_tb/zumo_tb.ioc
@@ -65,7 +65,8 @@ Mcu.IP5=RTC
 Mcu.IP6=SPI1
 Mcu.IP7=SYS
 Mcu.IP8=TIM1
-Mcu.IPNb=9
+Mcu.IP9=TIM16
+Mcu.IPNb=10
 Mcu.Name=STM32G081RBTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC11
@@ -130,10 +131,11 @@ Mcu.Pin61=VP_RTC_VS_RTC_WakeUp_intern
 Mcu.Pin62=VP_SYS_VS_Systick
 Mcu.Pin63=VP_SYS_VS_DBSignals
 Mcu.Pin64=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin65=VP_TIM16_VS_ClockSourceINT
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0
-Mcu.PinsNb=65
+Mcu.PinsNb=66
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=I2C_ADDR,0x10
 Mcu.UserName=STM32G081RBTx
@@ -430,7 +432,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_LPTIM1_Init-LPTIM1-false-HAL-true,6-MX_LPTIM2_Init-LPTIM2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_RNG_Init-RNG-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_AES_Init-AES-false-HAL-true,12-MX_CRC_Init-CRC-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_TIM16_Init-TIM16-false-HAL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=64000000
 RCC.APBFreq_Value=64000000
@@ -474,7 +476,7 @@ SH.GPXTI14.0=GPIO_EXTI14
 SH.GPXTI14.ConfNb=1
 SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
-SH.S_TIM16_CH1.0=TIM16_CH1
+SH.S_TIM16_CH1.0=TIM16_CH1,PWM Generation1 CH1
 SH.S_TIM16_CH1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CLKPolarity=SPI_POLARITY_LOW
@@ -489,6 +491,16 @@ TIM1.ClockDivision=TIM_CLOCKDIVISION_DIV2
 TIM1.IPParameters=Period,Prescaler,ClockDivision
 TIM1.Period=65535
 TIM1.Prescaler=10000
+TIM16.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM16.BreakPolarity=TIM_BREAKPOLARITY_LOW
+TIM16.BreakState=TIM_BREAK_DISABLE
+TIM16.Channel=TIM_CHANNEL_1
+TIM16.ClockDivision=TIM_CLOCKDIVISION_DIV1
+TIM16.IPParameters=Channel,Prescaler,AutoReloadPreload,Period,BreakState,Pulse,ClockDivision,BreakPolarity,OCIdleState_1
+TIM16.OCIdleState_1=TIM_OCIDLESTATE_RESET
+TIM16.Period=10000
+TIM16.Prescaler=160
+TIM16.Pulse=5000
 VP_ADC1_TempSens_Input.Mode=IN-TempSens
 VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
 VP_ADC1_Vbat_Input.Mode=IN-Vbat
@@ -505,6 +517,8 @@ VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM16_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM16_VS_ClockSourceINT.Signal=TIM16_VS_ClockSourceINT
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 board=custom
