--- a/fw/stm32/zumo_tb/zumo_tb.ioc
+++ b/fw/stm32/zumo_tb/zumo_tb.ioc
@@ -2,32 +2,34 @@
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
 ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
 ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_TEMPSENSOR
-ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
-ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_VBAT
-ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV16
+ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
+ADC1.ChannelTS=ADC_CHANNEL_TEMPSENSOR
+ADC1.ChannelVREF=ADC_CHANNEL_VREFINT
+ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV256
+ADC1.ContinuousConvMode=ENABLE
 ADC1.DMAContinuousRequests=ENABLE
-ADC1.DiscontinuousConvMode=ENABLE
+ADC1.DiscontinuousConvMode=DISABLE
 ADC1.EOCSelection=ADC_EOC_SEQ_CONV
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,LowPowerAutoPowerOff,master,OversamplingMode,NbrOfConversion,SamplingTimeCommon1,SamplingTimeCommon2,ClockPrescaler,DiscontinuousConvMode,LowPowerAutoWait,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,ScanConvMode,DMAContinuousRequests,TriggerFrequencyMode,EOCSelection
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,LowPowerAutoPowerOff,master,OversamplingMode,NbrOfConversion,SamplingTimeCommon1,SamplingTimeCommon2,ClockPrescaler,DiscontinuousConvMode,LowPowerAutoWait,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,ScanConvMode,DMAContinuousRequests,TriggerFrequencyMode,EOCSelection,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,ContinuousConvMode,Overrun,SelectedChannel,ChannelTS,ChannelVREF
 ADC1.LowPowerAutoPowerOff=ENABLE
-ADC1.LowPowerAutoWait=ENABLE
-ADC1.NbrOfConversion=5
+ADC1.LowPowerAutoWait=DISABLE
+ADC1.NbrOfConversion=4
 ADC1.NbrOfConversionFlag=1
+ADC1.Overrun=ADC_OVR_DATA_PRESERVED
 ADC1.OversamplingMode=DISABLE
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.Rank-1\#ChannelRegularConversion=2
 ADC1.Rank-2\#ChannelRegularConversion=3
-ADC1.Rank-3\#ChannelRegularConversion=4
-ADC1.Rank-4\#ChannelRegularConversion=5
+ADC1.Rank-5\#ChannelRegularConversion=4
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLINGTIME_COMMON_1
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLINGTIME_COMMON_1
 ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLINGTIME_COMMON_2
-ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLINGTIME_COMMON_1
-ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLINGTIME_COMMON_1
-ADC1.SamplingTimeCommon1=ADC_SAMPLETIME_12CYCLES_5
+ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLINGTIME_COMMON_1
+ADC1.SamplingTimeCommon1=ADC_SAMPLETIME_39CYCLES_5
 ADC1.SamplingTimeCommon2=ADC_SAMPLETIME_160CYCLES_5
-ADC1.ScanConvMode=ADC_SCAN_ENABLE
-ADC1.TriggerFrequencyMode=ADC_TRIGGER_FREQ_HIGH
+ADC1.ScanConvMode=ADC_SCAN_DISABLE
+ADC1.SelectedChannel=ADC_CHANNEL_0|ADC_CHANNEL_1|ADC_CHANNEL_TEMPSENSOR|ADC_CHANNEL_VREFINT|ADC_CHANNEL_VBAT
+ADC1.TriggerFrequencyMode=ADC_TRIGGER_FREQ_LOW
 ADC1.master=1
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.EventEnable=DISABLE
@@ -53,94 +55,104 @@ GPIO.groupedBy=Group By Peripherals
 I2C1.I2C_Speed_Mode=I2C_Fast
 I2C1.IPParameters=I2C_Speed_Mode,Timing,OwnAddress
 I2C1.OwnAddress=I2C_ADDR
-I2C1.Timing=0x00602173
+I2C1.Timing=0x0010061A
+IWDG.IPParameters=Prescaler,Window,Reload
+IWDG.Prescaler=IWDG_PRESCALER_32
+IWDG.Reload=1000
+IWDG.Window=0xfff
 KeepUserPlacement=false
+LPTIM1.ClockPrescaler=LPTIM_PRESCALER_DIV32
+LPTIM1.IPParameters=ClockPrescaler
 Mcu.Family=STM32G0
 Mcu.IP0=ADC1
 Mcu.IP1=DMA
+Mcu.IP10=TIM1
+Mcu.IP11=TIM16
 Mcu.IP2=I2C1
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=RTC
-Mcu.IP6=SPI1
-Mcu.IP7=SYS
-Mcu.IP8=TIM1
-Mcu.IP9=TIM16
-Mcu.IPNb=10
+Mcu.IP3=IWDG
+Mcu.IP4=LPTIM1
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=RTC
+Mcu.IP8=SPI1
+Mcu.IP9=SYS
+Mcu.IPNb=12
 Mcu.Name=STM32G081RBTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC11
 Mcu.Pin1=PC12
-Mcu.Pin10=PA1
-Mcu.Pin11=PA2
-Mcu.Pin12=PA3
-Mcu.Pin13=PA4
-Mcu.Pin14=PA5
-Mcu.Pin15=PA6
-Mcu.Pin16=PA7
-Mcu.Pin17=PC4
-Mcu.Pin18=PC5
-Mcu.Pin19=PB0
+Mcu.Pin10=PA0
+Mcu.Pin11=PA1
+Mcu.Pin12=PA2
+Mcu.Pin13=PA3
+Mcu.Pin14=PA4
+Mcu.Pin15=PA5
+Mcu.Pin16=PA6
+Mcu.Pin17=PA7
+Mcu.Pin18=PC4
+Mcu.Pin19=PC5
 Mcu.Pin2=PC13
-Mcu.Pin20=PB1
-Mcu.Pin21=PB2
-Mcu.Pin22=PB10
-Mcu.Pin23=PB12
-Mcu.Pin24=PB13
-Mcu.Pin25=PB14
-Mcu.Pin26=PB15
-Mcu.Pin27=PA8
-Mcu.Pin28=PA9
-Mcu.Pin29=PC6
+Mcu.Pin20=PB0
+Mcu.Pin21=PB1
+Mcu.Pin22=PB2
+Mcu.Pin23=PB10
+Mcu.Pin24=PB12
+Mcu.Pin25=PB13
+Mcu.Pin26=PB14
+Mcu.Pin27=PB15
+Mcu.Pin28=PA8
+Mcu.Pin29=PA9
 Mcu.Pin3=PC14-OSC32_IN (PC14)
-Mcu.Pin30=PC7
-Mcu.Pin31=PD8
-Mcu.Pin32=PD9
-Mcu.Pin33=PA10
-Mcu.Pin34=PA11 [PA9]
-Mcu.Pin35=PA12 [PA10]
-Mcu.Pin36=PA13
-Mcu.Pin37=PA14-BOOT0
-Mcu.Pin38=PA15
-Mcu.Pin39=PC8
+Mcu.Pin30=PC6
+Mcu.Pin31=PC7
+Mcu.Pin32=PD8
+Mcu.Pin33=PD9
+Mcu.Pin34=PA10
+Mcu.Pin35=PA11 [PA9]
+Mcu.Pin36=PA12 [PA10]
+Mcu.Pin37=PA13
+Mcu.Pin38=PA14-BOOT0
+Mcu.Pin39=PA15
 Mcu.Pin4=PC15-OSC32_OUT (PC15)
-Mcu.Pin40=PC9
-Mcu.Pin41=PD0
-Mcu.Pin42=PD1
-Mcu.Pin43=PD2
-Mcu.Pin44=PD3
-Mcu.Pin45=PD4
-Mcu.Pin46=PD5
-Mcu.Pin47=PD6
-Mcu.Pin48=PB3
-Mcu.Pin49=PB4
-Mcu.Pin5=PC0
-Mcu.Pin50=PB5
-Mcu.Pin51=PB6
-Mcu.Pin52=PB7
-Mcu.Pin53=PB8
-Mcu.Pin54=PB9
-Mcu.Pin55=PC10
-Mcu.Pin56=VP_ADC1_TempSens_Input
-Mcu.Pin57=VP_ADC1_Vref_Input
-Mcu.Pin58=VP_ADC1_Vbat_Input
-Mcu.Pin59=VP_RTC_VS_RTC_Activate
-Mcu.Pin6=PC1
-Mcu.Pin60=VP_RTC_VS_RTC_Calendar
-Mcu.Pin61=VP_RTC_VS_RTC_WakeUp_intern
-Mcu.Pin62=VP_SYS_VS_Systick
-Mcu.Pin63=VP_SYS_VS_DBSignals
-Mcu.Pin64=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin65=VP_TIM16_VS_ClockSourceINT
-Mcu.Pin7=PC2
-Mcu.Pin8=PC3
-Mcu.Pin9=PA0
-Mcu.PinsNb=66
+Mcu.Pin40=PC8
+Mcu.Pin41=PC9
+Mcu.Pin42=PD0
+Mcu.Pin43=PD1
+Mcu.Pin44=PD2
+Mcu.Pin45=PD3
+Mcu.Pin46=PD4
+Mcu.Pin47=PD5
+Mcu.Pin48=PD6
+Mcu.Pin49=PB3
+Mcu.Pin5=VREF+
+Mcu.Pin50=PB4
+Mcu.Pin51=PB5
+Mcu.Pin52=PB6
+Mcu.Pin53=PB7
+Mcu.Pin54=PB8
+Mcu.Pin55=PB9
+Mcu.Pin56=PC10
+Mcu.Pin57=VP_ADC1_TempSens_Input
+Mcu.Pin58=VP_ADC1_Vref_Input
+Mcu.Pin59=VP_ADC1_Vbat_Input
+Mcu.Pin6=PC0
+Mcu.Pin60=VP_IWDG_VS_IWDG
+Mcu.Pin61=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
+Mcu.Pin62=VP_RTC_VS_RTC_Activate
+Mcu.Pin63=VP_RTC_VS_RTC_Calendar
+Mcu.Pin64=VP_SYS_VS_Systick
+Mcu.Pin65=VP_SYS_VS_DBSignals
+Mcu.Pin66=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin67=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin7=PC1
+Mcu.Pin8=PC2
+Mcu.Pin9=PC3
+Mcu.PinsNb=68
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=I2C_ADDR,0x10
 Mcu.UserName=STM32G081RBTx
-MxCube.Version=5.5.0
-MxDb.Version=DB.5.0.50
+MxCube.Version=6.0.1
+MxDb.Version=DB.6.0.0
 NVIC.ADC1_COMP_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.EXTI4_15_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -149,10 +161,10 @@ NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.I2C1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.RTC_TAMP_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM1_BRK_UP_TRG_COM_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM6_DAC_LPTIM1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=ADC0
 PA0.Locked=true
@@ -244,14 +256,11 @@ PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=I_BUS_FON
 PB14.Locked=true
 PB14.Signal=GPIO_Input
-PB15.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB15.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB15.GPIO_Label=ZUMO_SHDN
-PB15.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PB15.GPIO_PuPd=GPIO_PULLUP
-PB15.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB15.Locked=true
-PB15.PinState=GPIO_PIN_RESET
-PB15.Signal=GPIO_Output
+PB15.Signal=GPIO_Input
 PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=U3_ZUMO_RXD
 PB2.Locked=true
@@ -300,12 +309,10 @@ PC12.GPIOParameters=GPIO_Label
 PC12.GPIO_Label=DC
 PC12.Locked=true
 PC12.Signal=GPIO_Output
-PC13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=KEY1
-PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PC13.GPIO_PuPd=GPIO_PULLUP
 PC13.Locked=true
-PC13.Signal=GPXTI13
+PC13.Signal=GPIO_Input
 PC14-OSC32_IN\ (PC14).GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC14-OSC32_IN\ (PC14).GPIO_Label=KEY2
 PC14-OSC32_IN\ (PC14).GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -428,29 +435,35 @@ ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=zumo_tb.ioc
 ProjectManager.ProjectName=zumo_tb
+ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_TIM16_Init-TIM16-false-HAL-true
-RCC.ADCFreq_Value=64000000
-RCC.AHBFreq_Value=64000000
-RCC.APBFreq_Value=64000000
-RCC.APBTimFreq_Value=64000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_TIM16_Init-TIM16-false-HAL-true,10-MX_LPTIM1_Init-LPTIM1-false-HAL-true,11-MX_IWDG_Init-IWDG-false-HAL-true
+RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_HSI
+RCC.ADCFreq_Value=16000000
+RCC.AHBCLKDivider=RCC_SYSCLK_DIV8
+RCC.AHBFreq_Value=8000000
+RCC.APBFreq_Value=8000000
+RCC.APBTimFreq_Value=8000000
 RCC.CECFreq_Value=32786.88524590164
-RCC.CortexFreq_Value=64000000
+RCC.CortexFreq_Value=1000000
+RCC.Cortex_Div=SYSTICK_CLKSOURCE_HCLK_DIV8
 RCC.EXTERNAL_CLOCK_VALUE=48000
-RCC.FCLKCortexFreq_Value=64000000
+RCC.FCLKCortexFreq_Value=8000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=64000000
-RCC.HSE_VALUE=8000000
+RCC.HCLKFreq_Value=8000000
+RCC.HSE_VALUE=4000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=64000000
+RCC.I2C1CLockSelection=RCC_I2C1CLKSOURCE_HSI
+RCC.I2C1Freq_Value=16000000
 RCC.I2S1Freq_Value=64000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APBFreq_Value,APBTimFreq_Value,CECFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2S1Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,RNGFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIM15Freq_Value,TIM1Freq_Value,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
-RCC.LPTIM1Freq_Value=64000000
-RCC.LPTIM2Freq_Value=64000000
-RCC.LPUART1Freq_Value=64000000
+RCC.IPParameters=ADCCLockSelection,ADCFreq_Value,AHBCLKDivider,AHBFreq_Value,APBFreq_Value,APBTimFreq_Value,CECFreq_Value,CortexFreq_Value,Cortex_Div,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1CLockSelection,I2C1Freq_Value,I2S1Freq_Value,LPTIM1CLockSelection,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,RNGFreq_Value,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIM15Freq_Value,TIM1CLockSelectionVirtual,TIM1Freq_Value,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
+RCC.LPTIM1CLockSelection=RCC_LPTIM1CLKSOURCE_LSI
+RCC.LPTIM1Freq_Value=32000
+RCC.LPTIM2Freq_Value=8000000
+RCC.LPUART1Freq_Value=8000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
@@ -460,18 +473,21 @@ RCC.PLLQoutputFreq_Value=64000000
 RCC.PLLRCLKFreq_Value=64000000
 RCC.PWRFreq_Value=64000000
 RCC.RNGFreq_Value=2000000
+RCC.RTCFreq_Value=32000
 RCC.SYSCLKFreq_VALUE=64000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.TIM15Freq_Value=64000000
+RCC.TIM15Freq_Value=8000000
+RCC.TIM1CLockSelectionVirtual=RCC_TIM1CLKSOURCE_PLL
 RCC.TIM1Freq_Value=64000000
-RCC.USART1Freq_Value=64000000
-RCC.USART2Freq_Value=64000000
+RCC.USART1Freq_Value=8000000
+RCC.USART2Freq_Value=8000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=128000000
-RTC.IPParameters=WakeUpCounter-WakeUp
-RTC.WakeUpCounter-WakeUp=2050
-SH.GPXTI13.0=GPIO_EXTI13
-SH.GPXTI13.ConfNb=1
+RTC.AsynchPrediv=127
+RTC.HourFormat=RTC_HOURFORMAT_24
+RTC.IPParameters=StoreOperation,AsynchPrediv,SynchPrediv,HourFormat
+RTC.StoreOperation=RTC_STOREOPERATION_RESET
+RTC.SynchPrediv=249
 SH.GPXTI14.0=GPIO_EXTI14
 SH.GPXTI14.ConfNb=1
 SH.GPXTI9.0=GPIO_EXTI9
@@ -480,7 +496,7 @@ SH.S_TIM16_CH1.0=TIM16_CH1,PWM Generation1 CH1
 SH.S_TIM16_CH1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CLKPolarity=SPI_POLARITY_LOW
-SPI1.CalculateBaudRate=32.0 MBits/s
+SPI1.CalculateBaudRate=4.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,DataSize,BaudRatePrescaler,CLKPolarity
@@ -507,12 +523,14 @@ VP_ADC1_Vbat_Input.Mode=IN-Vbat
 VP_ADC1_Vbat_Input.Signal=ADC1_Vbat_Input
 VP_ADC1_Vref_Input.Mode=IN-Vrefint
 VP_ADC1_Vref_Input.Signal=ADC1_Vref_Input
+VP_IWDG_VS_IWDG.Mode=IWDG_Activate
+VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
+VP_LPTIM1_VS_LPTIM_counterModeInternalClock.Mode=Counts__internal_clock_event_00
+VP_LPTIM1_VS_LPTIM_counterModeInternalClock.Signal=LPTIM1_VS_LPTIM_counterModeInternalClock
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
-VP_RTC_VS_RTC_WakeUp_intern.Mode=WakeUp
-VP_RTC_VS_RTC_WakeUp_intern.Signal=RTC_VS_RTC_WakeUp_intern
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
@@ -521,5 +539,7 @@ VP_TIM16_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM16_VS_ClockSourceINT.Signal=TIM16_VS_ClockSourceINT
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VREF+.Mode=InternalMode
+VREF+.Signal=VREFBUF_OUT
 board=custom
 isbadioc=false
