--- a/fw/stm32/zumo_tb/zumo_tb.ioc
+++ b/fw/stm32/zumo_tb/zumo_tb.ioc
@@ -52,8 +52,11 @@ Dma.Request0=ADC1
 Dma.RequestsNb=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C1.Analog_Filter=I2C_ANALOGFILTER_ENABLE
+I2C1.CustomTiming=Disabled
+I2C1.GeneralCallMode=I2C_GENERALCALL_DISABLE
 I2C1.I2C_Speed_Mode=I2C_Fast
-I2C1.IPParameters=I2C_Speed_Mode,Timing,OwnAddress
+I2C1.IPParameters=Timing,I2C_Speed_Mode,OwnAddress,GeneralCallMode,Analog_Filter,CustomTiming
 I2C1.OwnAddress=I2C_ADDR
 I2C1.Timing=0x0010061A
 IWDG.IPParameters=Prescaler,Window,Reload
@@ -175,6 +178,10 @@ PA1.GPIO_Label=ADC1
 PA1.Locked=true
 PA1.Mode=IN1
 PA1.Signal=ADC1_IN1
+PA10.GPIOParameters=GPIO_FMPA10,GPIO_Speed
+PA10.GPIO_FMPA10=__NULL
+PA10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PA10.Locked=true
 PA10.Mode=I2C
 PA10.Signal=I2C1_SDA
 PA11\ [PA9].GPIOParameters=GPIO_Speed
@@ -230,6 +237,10 @@ PA8.GPIO_PuPd=GPIO_NOPULL
 PA8.Locked=true
 PA8.PinState=GPIO_PIN_RESET
 PA8.Signal=GPIO_Output
+PA9.GPIOParameters=GPIO_Speed,GPIO_FMPA9
+PA9.GPIO_FMPA9=__NULL
+PA9.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PA9.Locked=true
 PA9.Mode=I2C
 PA9.Signal=I2C1_SCL
 PB0.GPIOParameters=GPIO_Label
@@ -440,7 +451,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_TIM16_Init-TIM16-false-HAL-true,10-MX_LPTIM1_Init-LPTIM1-false-HAL-true,11-MX_IWDG_Init-IWDG-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_TIM16_Init-TIM16-false-HAL-true,9-MX_LPTIM1_Init-LPTIM1-false-HAL-true,10-MX_IWDG_Init-IWDG-false-HAL-true,11-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_HSI
 RCC.ADCFreq_Value=16000000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV8
