--- a/fw/stm32/zumo_tb/zumo_tb.ioc
+++ b/fw/stm32/zumo_tb/zumo_tb.ioc
@@ -55,10 +55,10 @@ GPIO.groupedBy=Group By Peripherals
 I2C1.Analog_Filter=I2C_ANALOGFILTER_ENABLE
 I2C1.CustomTiming=Disabled
 I2C1.GeneralCallMode=I2C_GENERALCALL_DISABLE
-I2C1.I2C_Speed_Mode=I2C_Fast
+I2C1.I2C_Speed_Mode=I2C_Fast_Plus
 I2C1.IPParameters=Timing,I2C_Speed_Mode,OwnAddress,GeneralCallMode,Analog_Filter,CustomTiming
 I2C1.OwnAddress=I2C_ADDR
-I2C1.Timing=0x0010061A
+I2C1.Timing=0x00300B29
 IWDG.IPParameters=Prescaler,Window,Reload
 IWDG.Prescaler=IWDG_PRESCALER_32
 IWDG.Reload=1000
@@ -143,14 +143,15 @@ Mcu.Pin60=VP_IWDG_VS_IWDG
 Mcu.Pin61=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
 Mcu.Pin62=VP_RTC_VS_RTC_Activate
 Mcu.Pin63=VP_RTC_VS_RTC_Calendar
-Mcu.Pin64=VP_SYS_VS_Systick
-Mcu.Pin65=VP_SYS_VS_DBSignals
-Mcu.Pin66=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin67=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin64=VP_SYS_V_PVD_IN
+Mcu.Pin65=VP_SYS_VS_Systick
+Mcu.Pin66=VP_SYS_VS_DBSignals
+Mcu.Pin67=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin68=VP_TIM16_VS_ClockSourceINT
 Mcu.Pin7=PC1
 Mcu.Pin8=PC2
 Mcu.Pin9=PC3
-Mcu.PinsNb=68
+Mcu.PinsNb=69
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=I2C_ADDR,0x10
 Mcu.UserName=STM32G081RBTx
@@ -454,27 +455,27 @@ ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_TIM16_Init-TIM16-false-HAL-true,9-MX_LPTIM1_Init-LPTIM1-false-HAL-true,10-MX_IWDG_Init-IWDG-false-HAL-true,11-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_HSI
 RCC.ADCFreq_Value=16000000
-RCC.AHBCLKDivider=RCC_SYSCLK_DIV8
-RCC.AHBFreq_Value=8000000
-RCC.APBFreq_Value=8000000
-RCC.APBTimFreq_Value=8000000
+RCC.AHBCLKDivider=RCC_SYSCLK_DIV64
+RCC.AHBFreq_Value=1000000
+RCC.APBFreq_Value=1000000
+RCC.APBTimFreq_Value=1000000
 RCC.CECFreq_Value=32786.88524590164
-RCC.CortexFreq_Value=1000000
+RCC.CortexFreq_Value=125000
 RCC.Cortex_Div=SYSTICK_CLKSOURCE_HCLK_DIV8
 RCC.EXTERNAL_CLOCK_VALUE=48000
-RCC.FCLKCortexFreq_Value=8000000
+RCC.FCLKCortexFreq_Value=1000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=8000000
+RCC.HCLKFreq_Value=1000000
 RCC.HSE_VALUE=4000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1CLockSelection=RCC_I2C1CLKSOURCE_HSI
-RCC.I2C1Freq_Value=16000000
+RCC.I2C1CLockSelection=RCC_I2C1CLKSOURCE_SYSCLK
+RCC.I2C1Freq_Value=64000000
 RCC.I2S1Freq_Value=64000000
 RCC.IPParameters=ADCCLockSelection,ADCFreq_Value,AHBCLKDivider,AHBFreq_Value,APBFreq_Value,APBTimFreq_Value,CECFreq_Value,CortexFreq_Value,Cortex_Div,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1CLockSelection,I2C1Freq_Value,I2S1Freq_Value,LPTIM1CLockSelection,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,RNGFreq_Value,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIM15Freq_Value,TIM1CLockSelectionVirtual,TIM1Freq_Value,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
 RCC.LPTIM1CLockSelection=RCC_LPTIM1CLKSOURCE_LSI
 RCC.LPTIM1Freq_Value=32000
-RCC.LPTIM2Freq_Value=8000000
-RCC.LPUART1Freq_Value=8000000
+RCC.LPTIM2Freq_Value=1000000
+RCC.LPUART1Freq_Value=1000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
@@ -487,11 +488,11 @@ RCC.RNGFreq_Value=2000000
 RCC.RTCFreq_Value=32000
 RCC.SYSCLKFreq_VALUE=64000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.TIM15Freq_Value=8000000
+RCC.TIM15Freq_Value=1000000
 RCC.TIM1CLockSelectionVirtual=RCC_TIM1CLKSOURCE_PLL
 RCC.TIM1Freq_Value=64000000
-RCC.USART1Freq_Value=8000000
-RCC.USART2Freq_Value=8000000
+RCC.USART1Freq_Value=1000000
+RCC.USART2Freq_Value=1000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=128000000
 RTC.AsynchPrediv=127
@@ -507,7 +508,7 @@ SH.S_TIM16_CH1.0=TIM16_CH1,PWM Generation1 CH1
 SH.S_TIM16_CH1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CLKPolarity=SPI_POLARITY_LOW
-SPI1.CalculateBaudRate=4.0 MBits/s
+SPI1.CalculateBaudRate=500.0 KBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,DataSize,BaudRatePrescaler,CLKPolarity
@@ -546,6 +547,8 @@ VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_SYS_V_PVD_IN.Mode=Mode_PVD_Int
+VP_SYS_V_PVD_IN.Signal=SYS_V_PVD_IN
 VP_TIM16_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM16_VS_ClockSourceINT.Signal=TIM16_VS_ClockSourceINT
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
