--- a/fw/stm32/zumo_tb/zumo_tb.ioc
+++ b/fw/stm32/zumo_tb/zumo_tb.ioc
@@ -56,7 +56,8 @@ I2C1.Analog_Filter=I2C_ANALOGFILTER_ENABLE
 I2C1.CustomTiming=Disabled
 I2C1.GeneralCallMode=I2C_GENERALCALL_DISABLE
 I2C1.I2C_Speed_Mode=I2C_Fast_Plus
-I2C1.IPParameters=Timing,I2C_Speed_Mode,OwnAddress,GeneralCallMode,Analog_Filter,CustomTiming
+I2C1.IPParameters=Timing,I2C_Speed_Mode,OwnAddress,GeneralCallMode,Analog_Filter,CustomTiming,NoStretchMode
+I2C1.NoStretchMode=I2C_NOSTRETCH_DISABLE
 I2C1.OwnAddress=I2C_ADDR
 I2C1.Timing=0x00300B29
 IWDG.IPParameters=Prescaler,Window,Reload
@@ -159,7 +160,6 @@ MxCube.Version=6.0.1
 MxDb.Version=DB.6.0.0
 NVIC.ADC1_COMP_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.EXTI4_15_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.I2C1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -185,12 +185,14 @@ PA10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA10.Locked=true
 PA10.Mode=I2C
 PA10.Signal=I2C1_SDA
-PA11\ [PA9].GPIOParameters=GPIO_Speed
+PA11\ [PA9].GPIOParameters=GPIO_Speed,GPIO_Label
+PA11\ [PA9].GPIO_Label=SPI_MISO
 PA11\ [PA9].GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA11\ [PA9].Locked=true
 PA11\ [PA9].Mode=Full_Duplex_Master
 PA11\ [PA9].Signal=SPI1_MISO
-PA12\ [PA10].GPIOParameters=GPIO_Speed
+PA12\ [PA10].GPIOParameters=GPIO_Speed,GPIO_Label
+PA12\ [PA10].GPIO_Label=SPI_MOSI
 PA12\ [PA10].GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA12\ [PA10].Locked=true
 PA12\ [PA10].Mode=Full_Duplex_Master
@@ -200,7 +202,8 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_SWDIO
 PA14-BOOT0.Mode=Serial_Wire
 PA14-BOOT0.Signal=SYS_SWCLK
-PA15.GPIOParameters=GPIO_Speed
+PA15.GPIOParameters=GPIO_Speed,GPIO_Label
+PA15.GPIO_Label=SPI_CS
 PA15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA15.Locked=true
 PA15.Mode=NSS_Signal_Hard_Output
@@ -217,18 +220,19 @@ PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=O_L_RST_10
 PA4.Locked=true
 PA4.Signal=GPIO_Output
-PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PA5.GPIO_Label=SPI_CLK
 PA5.GPIO_PuPd=GPIO_NOPULL
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA5.Locked=true
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
 PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=CS
+PA6.GPIO_Label=RPI_CS0
 PA6.Locked=true
-PA6.Signal=GPIO_Output
+PA6.Signal=GPIO_Input
 PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=I_RPI_CS1
+PA7.GPIO_Label=RPI_CS1
 PA7.Locked=true
 PA7.Signal=GPIO_Input
 PA8.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
@@ -310,27 +314,25 @@ PC1.GPIO_Label=O_LED1
 PC1.Locked=true
 PC1.Signal=GPIO_Output
 PC10.GPIOParameters=GPIO_Label
-PC10.GPIO_Label=RST
+PC10.GPIO_Label=RPI_13
 PC10.Locked=true
-PC10.Signal=GPIO_Output
+PC10.Signal=GPIO_Input
 PC11.GPIOParameters=GPIO_Label
-PC11.GPIO_Label=I_RPI_14
+PC11.GPIO_Label=RPI_14
 PC11.Locked=true
 PC11.Signal=GPIO_Input
 PC12.GPIOParameters=GPIO_Label
-PC12.GPIO_Label=DC
+PC12.GPIO_Label=RPI_15
 PC12.Locked=true
-PC12.Signal=GPIO_Output
+PC12.Signal=GPIO_Input
 PC13.GPIOParameters=GPIO_Label
-PC13.GPIO_Label=KEY1
+PC13.GPIO_Label=RPI_16
 PC13.Locked=true
 PC13.Signal=GPIO_Input
-PC14-OSC32_IN\ (PC14).GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PC14-OSC32_IN\ (PC14).GPIO_Label=KEY2
-PC14-OSC32_IN\ (PC14).GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PC14-OSC32_IN\ (PC14).GPIO_PuPd=GPIO_PULLUP
+PC14-OSC32_IN\ (PC14).GPIOParameters=GPIO_Label
+PC14-OSC32_IN\ (PC14).GPIO_Label=RPI_18
 PC14-OSC32_IN\ (PC14).Locked=true
-PC14-OSC32_IN\ (PC14).Signal=GPXTI14
+PC14-OSC32_IN\ (PC14).Signal=GPIO_Input
 PC15-OSC32_OUT\ (PC15).GPIOParameters=GPIO_Label
 PC15-OSC32_OUT\ (PC15).GPIO_Label=I_INT
 PC15-OSC32_OUT\ (PC15).Locked=true
@@ -356,15 +358,13 @@ PC7.GPIO_Label=O_L_RST_8
 PC7.Locked=true
 PC7.Signal=GPIO_Output
 PC8.GPIOParameters=GPIO_Label
-PC8.GPIO_Label=I_RPI_11
+PC8.GPIO_Label=RPI_11
 PC8.Locked=true
 PC8.Signal=GPIO_Input
-PC9.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PC9.GPIO_Label=KEY0
-PC9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PC9.GPIO_PuPd=GPIO_PULLUP
+PC9.GPIOParameters=GPIO_Label
+PC9.GPIO_Label=RPI_12
 PC9.Locked=true
-PC9.Signal=GPXTI9
+PC9.Signal=GPIO_Input
 PCC.Checker=true
 PCC.Line=STM32G0x1
 PCC.MCU=STM32G081RBTx
@@ -500,10 +500,6 @@ RTC.HourFormat=RTC_HOURFORMAT_24
 RTC.IPParameters=StoreOperation,AsynchPrediv,SynchPrediv,HourFormat
 RTC.StoreOperation=RTC_STOREOPERATION_RESET
 RTC.SynchPrediv=249
-SH.GPXTI14.0=GPIO_EXTI14
-SH.GPXTI14.ConfNb=1
-SH.GPXTI9.0=GPIO_EXTI9
-SH.GPXTI9.ConfNb=1
 SH.S_TIM16_CH1.0=TIM16_CH1,PWM Generation1 CH1
 SH.S_TIM16_CH1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
