--- a/fw/stm32/zumo_tb/zumo_tb.ioc
+++ b/fw/stm32/zumo_tb/zumo_tb.ioc
@@ -67,20 +67,25 @@ IWDG.Window=0xfff
 KeepUserPlacement=false
 LPTIM1.ClockPrescaler=LPTIM_PRESCALER_DIV32
 LPTIM1.IPParameters=ClockPrescaler
+LPUART1.BaudRate=115200
+LPUART1.IPParameters=BaudRate,WordLength,Mode
+LPUART1.Mode=UART_MODE_RX
+LPUART1.WordLength=UART_WORDLENGTH_8B
 Mcu.Family=STM32G0
 Mcu.IP0=ADC1
 Mcu.IP1=DMA
-Mcu.IP10=TIM1
-Mcu.IP11=TIM16
+Mcu.IP10=SYS
+Mcu.IP11=TIM1
+Mcu.IP12=TIM16
 Mcu.IP2=I2C1
 Mcu.IP3=IWDG
 Mcu.IP4=LPTIM1
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=RTC
-Mcu.IP8=SPI1
-Mcu.IP9=SYS
-Mcu.IPNb=12
+Mcu.IP5=LPUART1
+Mcu.IP6=NVIC
+Mcu.IP7=RCC
+Mcu.IP8=RTC
+Mcu.IP9=SPI1
+Mcu.IPNb=13
 Mcu.Name=STM32G081RBTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC11
@@ -100,59 +105,60 @@ Mcu.Pin20=PB0
 Mcu.Pin21=PB1
 Mcu.Pin22=PB2
 Mcu.Pin23=PB10
-Mcu.Pin24=PB12
-Mcu.Pin25=PB13
-Mcu.Pin26=PB14
-Mcu.Pin27=PB15
-Mcu.Pin28=PA8
-Mcu.Pin29=PA9
+Mcu.Pin24=PB11
+Mcu.Pin25=PB12
+Mcu.Pin26=PB13
+Mcu.Pin27=PB14
+Mcu.Pin28=PB15
+Mcu.Pin29=PA8
 Mcu.Pin3=PC14-OSC32_IN (PC14)
-Mcu.Pin30=PC6
-Mcu.Pin31=PC7
-Mcu.Pin32=PD8
-Mcu.Pin33=PD9
-Mcu.Pin34=PA10
-Mcu.Pin35=PA11 [PA9]
-Mcu.Pin36=PA12 [PA10]
-Mcu.Pin37=PA13
-Mcu.Pin38=PA14-BOOT0
-Mcu.Pin39=PA15
+Mcu.Pin30=PA9
+Mcu.Pin31=PC6
+Mcu.Pin32=PC7
+Mcu.Pin33=PD8
+Mcu.Pin34=PD9
+Mcu.Pin35=PA10
+Mcu.Pin36=PA11 [PA9]
+Mcu.Pin37=PA12 [PA10]
+Mcu.Pin38=PA13
+Mcu.Pin39=PA14-BOOT0
 Mcu.Pin4=PC15-OSC32_OUT (PC15)
-Mcu.Pin40=PC8
-Mcu.Pin41=PC9
-Mcu.Pin42=PD0
-Mcu.Pin43=PD1
-Mcu.Pin44=PD2
-Mcu.Pin45=PD3
-Mcu.Pin46=PD4
-Mcu.Pin47=PD5
-Mcu.Pin48=PD6
-Mcu.Pin49=PB3
+Mcu.Pin40=PA15
+Mcu.Pin41=PC8
+Mcu.Pin42=PC9
+Mcu.Pin43=PD0
+Mcu.Pin44=PD1
+Mcu.Pin45=PD2
+Mcu.Pin46=PD3
+Mcu.Pin47=PD4
+Mcu.Pin48=PD5
+Mcu.Pin49=PD6
 Mcu.Pin5=VREF+
-Mcu.Pin50=PB4
-Mcu.Pin51=PB5
-Mcu.Pin52=PB6
-Mcu.Pin53=PB7
-Mcu.Pin54=PB8
-Mcu.Pin55=PB9
-Mcu.Pin56=PC10
-Mcu.Pin57=VP_ADC1_TempSens_Input
-Mcu.Pin58=VP_ADC1_Vref_Input
-Mcu.Pin59=VP_ADC1_Vbat_Input
+Mcu.Pin50=PB3
+Mcu.Pin51=PB4
+Mcu.Pin52=PB5
+Mcu.Pin53=PB6
+Mcu.Pin54=PB7
+Mcu.Pin55=PB8
+Mcu.Pin56=PB9
+Mcu.Pin57=PC10
+Mcu.Pin58=VP_ADC1_TempSens_Input
+Mcu.Pin59=VP_ADC1_Vref_Input
 Mcu.Pin6=PC0
-Mcu.Pin60=VP_IWDG_VS_IWDG
-Mcu.Pin61=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
-Mcu.Pin62=VP_RTC_VS_RTC_Activate
-Mcu.Pin63=VP_RTC_VS_RTC_Calendar
-Mcu.Pin64=VP_SYS_V_PVD_IN
-Mcu.Pin65=VP_SYS_VS_Systick
-Mcu.Pin66=VP_SYS_VS_DBSignals
-Mcu.Pin67=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin68=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin60=VP_ADC1_Vbat_Input
+Mcu.Pin61=VP_IWDG_VS_IWDG
+Mcu.Pin62=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
+Mcu.Pin63=VP_RTC_VS_RTC_Activate
+Mcu.Pin64=VP_RTC_VS_RTC_Calendar
+Mcu.Pin65=VP_SYS_V_PVD_IN
+Mcu.Pin66=VP_SYS_VS_Systick
+Mcu.Pin67=VP_SYS_VS_DBSignals
+Mcu.Pin68=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin69=VP_TIM16_VS_ClockSourceINT
 Mcu.Pin7=PC1
 Mcu.Pin8=PC2
 Mcu.Pin9=PC3
-Mcu.PinsNb=69
+Mcu.PinsNb=70
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=I2C_ADDR,0x10
 Mcu.UserName=STM32G081RBTx
@@ -169,6 +175,7 @@ NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM1_BRK_UP_TRG_COM_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM6_DAC_LPTIM1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.USART3_4_LPUART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=ADC0
 PA0.Locked=true
@@ -212,10 +219,9 @@ PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=O_LED2
 PA2.Locked=true
 PA2.Signal=GPIO_Output
-PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=U2_LIDAR_RX
 PA3.Locked=true
-PA3.Signal=USART2_RX
+PA3.Mode=Asynchronous
+PA3.Signal=LPUART1_RX
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=O_L_RST_10
 PA4.Locked=true
@@ -260,6 +266,8 @@ PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=SCL2
 PB10.Locked=true
 PB10.Signal=I2C2_SCL
+PB11.Mode=Asynchronous
+PB11.Signal=LPUART1_TX
 PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=O_L_RST_10
 PB12.Locked=true
