LDS uart decoder implemented

--- a/fw/stm32/zumo_tb/zumo_tb.ioc
+++ b/fw/stm32/zumo_tb/zumo_tb.ioc
@@ -1,9 +1,11 @@
 #MicroXplorer Configuration settings - do not modify
+Dma.LPUART1_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
 PCC.Series=STM32G0
 PB13.GPIOParameters=GPIO_Label
 PC7.GPIOParameters=GPIO_Label
 RCC.USART1Freq_Value=1000000
 ADC1.LowPowerAutoWait=DISABLE
+LPUART1.OverrunDisableParam=UART_ADVFEATURE_OVERRUN_DISABLE
 I2C1.I2C_Speed_Mode=I2C_Fast_Plus
 SPI1.VirtualType=VM_MASTER
 VP_ADC1_TempSens_Input.Mode=IN-TempSens
@@ -16,6 +18,7 @@ PB14.GPIO_Label=I_BUS_FON
 PC7.Locked=true
 PD3.GPIOParameters=GPIO_Label
 PD8.Locked=true
+Dma.LPUART1_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 PC6.GPIO_Label=O_L_RST_9
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 PC3.Locked=true
@@ -41,6 +44,7 @@ RTC.SynchPrediv=249
 PCC.PartNumber=STM32G081RBTx
 SH.S_TIM16_CH1.ConfNb=1
 ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
+Dma.LPUART1_RX.2.Priority=DMA_PRIORITY_LOW
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_HSI
 SPI1.Direction=SPI_DIRECTION_2LINES
 PA12\ [PA10].Signal=SPI1_MOSI
@@ -57,6 +61,7 @@ NVIC.TIM6_DAC_LPTIM1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PD8.Signal=GPIO_Output
 Dma.TIM16_CH1.1.Priority=DMA_PRIORITY_LOW
 Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.LPUART1_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
 PB13.Locked=true
 VREF+.Signal=VREFBUF_OUT
 ProjectManager.ProjectBuild=false
@@ -69,10 +74,11 @@ PCC.Seq0.Step0.Voltage_Source=Vbus
 PD1.GPIOParameters=GPIO_Label
 PD1.GPIO_Label=O_BUS_RESET
 PB12.GPIO_Label=O_L_RST_10
+Dma.LPUART1_RX.2.Mode=DMA_NORMAL
 RCC.TIM1CLockSelectionVirtual=RCC_TIM1CLKSOURCE_PLL
 PA12\ [PA10].GPIOParameters=GPIO_Speed,GPIO_Label
 LPTIM1.ClockPrescaler=LPTIM_PRESCALER_DIV32
-TIM16.OCPolarity_1=TIM_OCPOLARITY_LOW
+TIM16.OCPolarity_1=TIM_OCPOLARITY_HIGH
 ProjectManager.FirmwarePackage=STM32Cube FW_G0 V1.4.1
 VP_ADC1_Vref_Input.Mode=IN-Vrefint
 MxDb.Version=DB.6.0.20
@@ -80,6 +86,7 @@ PB0.GPIOParameters=GPIO_Label
 PA1.GPIOParameters=GPIO_Label
 I2C1.NoStretchMode=I2C_NOSTRETCH_DISABLE
 ProjectManager.BackupPrevious=false
+LPUART1.RxPinLevelInvertParam=UART_ADVFEATURE_RXINV_DISABLE
 PC4.GPIO_Label=U1_ESP_RXD
 PA5.GPIO_PuPd=GPIO_NOPULL
 PB1.GPIO_Label=O_L_RST_1
@@ -96,7 +103,7 @@ Dma.TIM16_CH1.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 ProjectManager.HalAssertFull=false
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLINGTIME_COMMON_1
-TIM16.Pulse=5000
+TIM16.Pulse=4000
 PA0.Signal=ADC1_IN0
 RCC.TIM1Freq_Value=64000000
 PC8.GPIOParameters=GPIO_Label
@@ -112,6 +119,7 @@ VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 RCC.LSCOPinFreq_Value=32000
 PA10.Signal=I2C1_SDA
 VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
+Dma.LPUART1_RX.2.Instance=DMA1_Channel3
 PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA12\ [PA10].Locked=true
 VP_SYS_V_PVD_IN.Mode=Mode_PVD_Int
@@ -120,7 +128,8 @@ Dma.TIM16_CH1.1.EventEnable=DISABLE
 RCC.PLLPoutputFreq_Value=64000000
 LPUART1.Mode=UART_MODE_RX
 RCC.CECFreq_Value=32786.88524590164
-RCC.LPUART1Freq_Value=1000000
+LPUART1.TXFIFOThreshold=UART_TXFIFO_THRESHOLD_1_2
+RCC.LPUART1Freq_Value=16000000
 TIM1.Period=65535
 PB10.GPIOParameters=GPIO_Label
 TIM16.Prescaler=160
@@ -133,6 +142,7 @@ ProjectManager.CustomerFirmwarePackage=
 PC4.GPIOParameters=GPIO_Label
 Dma.ADC1.0.EventEnable=DISABLE
 PA5.Mode=Full_Duplex_Master
+LPUART1.FifoMode=UART_FIFOMODE_ENABLE
 PA6.GPIOParameters=GPIO_Label
 PCC.Seq0.Step0.Category=In DS Table
 PD6.GPIOParameters=GPIO_Label
@@ -146,6 +156,7 @@ PD9.GPIO_Label=O_FLASH_CS
 PA12\ [PA10].GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA15.GPIOParameters=GPIO_Speed,GPIO_Label
 Mcu.PinsNb=70
+Dma.LPUART1_RX.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 PC11.Locked=true
 Dma.ADC1.0.SyncRequestNumber=1
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,LowPowerAutoPowerOff,master,OversamplingMode,NbrOfConversion,SamplingTimeCommon1,SamplingTimeCommon2,ClockPrescaler,DiscontinuousConvMode,LowPowerAutoWait,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,ScanConvMode,DMAContinuousRequests,TriggerFrequencyMode,EOCSelection,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,ContinuousConvMode,Overrun,SelectedChannel,ChannelTS,ChannelVREF
@@ -157,6 +168,7 @@ PC2.Signal=SPI2_MISO
 PD1.Signal=GPIO_Output
 SH.S_TIM16_CH1.0=TIM16_CH1,PWM Generation1 CH1
 VP_TIM16_VS_ClockSourceINT.Mode=Enable_Timer
+NVIC.TIM16_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 Mcu.Pin68=VP_TIM1_VS_ClockSourceINT
 Dma.TIM16_CH1.1.SyncSignalID=NONE
 PCC.Line=STM32G0x1
@@ -169,7 +181,7 @@ Mcu.Pin62=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
 Mcu.Pin63=VP_RTC_VS_RTC_Activate
 Mcu.Pin60=VP_ADC1_Vbat_Input
 Mcu.Pin61=VP_IWDG_VS_IWDG
-LPUART1.IPParameters=BaudRate,WordLength,Mode
+LPUART1.IPParameters=BaudRate,WordLength,Mode,FifoMode,RXFIFOThreshold,RxPinLevelInvertParam,OverrunDisableParam,DMADisableonRxErrorParam,TXFIFOThreshold
 Mcu.Pin66=VP_SYS_VS_Systick
 Mcu.Pin67=VP_SYS_VS_DBSignals
 Mcu.Pin64=VP_RTC_VS_RTC_Calendar
@@ -211,6 +223,7 @@ PB14.Signal=GPIO_Input
 PA5.Signal=SPI1_SCK
 Mcu.Pin40=PA15
 Mcu.Pin41=PC8
+LPUART1.DMADisableonRxErrorParam=UART_ADVFEATURE_DMA_DISABLEONRXERROR
 Mcu.Pin44=PD1
 Mcu.Pin45=PD2
 Mcu.Pin42=PC9
@@ -218,6 +231,7 @@ Mcu.Pin43=PD0
 ProjectManager.LastFirmware=true
 Dma.TIM16_CH1.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 PA1.Mode=IN1
+TIM16.AutomaticOutput=TIM_AUTOMATICOUTPUT_DISABLE
 PCC.Seq0.Step0.Vcore=NoRange
 Mcu.Pin37=PA12 [PA10]
 PB4.GPIO_Label=O_L_RST_4
@@ -239,6 +253,7 @@ Mcu.Pin31=PC6
 Mcu.Pin32=PC7
 PA9.Locked=true
 VP_TIM16_VS_ClockSourceINT.Signal=TIM16_VS_ClockSourceINT
+Dma.LPUART1_RX.2.SignalID=NONE
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV64
 PC10.GPIOParameters=GPIO_Label
@@ -253,6 +268,7 @@ Mcu.Pin27=PB14
 Mcu.Pin24=PB11
 ProjectManager.UnderRoot=true
 Mcu.Pin25=PB12
+Dma.LPUART1_RX.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
 Mcu.Pin28=PB15
 PC7.GPIO_Label=O_L_RST_8
 Mcu.Pin29=PA8
@@ -281,6 +297,7 @@ RTC.HourFormat=RTC_HOURFORMAT_24
 ProjectManager.HeapSize=0x200
 PA0.GPIOParameters=GPIO_Label
 Mcu.Pin15=PA5
+Dma.LPUART1_RX.2.SyncRequestNumber=1
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Mcu.Pin16=PA6
 Mcu.Pin13=PA3
@@ -293,6 +310,7 @@ Mcu.Pin18=PC4
 Mcu.Pin11=PA1
 Mcu.Pin12=PA2
 PD0.GPIOParameters=GPIO_Label
+Dma.LPUART1_RX.2.SyncSignalID=NONE
 Mcu.Pin10=PA0
 NVIC.DMA1_Channel2_3_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 TIM16.OCIdleState_1=TIM_OCIDLESTATE_RESET
@@ -310,6 +328,7 @@ ADC1.Rank-5\#ChannelRegularConversion=4
 PC1.Signal=GPIO_Output
 PB12.GPIOParameters=GPIO_Label
 PD2.GPIO_Label=O_BNO055_RESET
+Dma.LPUART1_RX.2.Direction=DMA_PERIPH_TO_MEMORY
 Mcu.Family=STM32G0
 ProjectManager.MainLocation=Core/Src
 PA11\ [PA9].Mode=Full_Duplex_Master
@@ -354,6 +373,7 @@ TIM16.BreakState=TIM_BREAK_DISABLE
 Mcu.IP4=LPTIM1
 Mcu.IP5=LPUART1
 RCC.FCLKCortexFreq_Value=1000000
+RCC.LPUART1CLockSelection=RCC_LPUART1CLKSOURCE_HSI
 Mcu.IP2=I2C1
 I2C1.IPParameters=Timing,I2C_Speed_Mode,OwnAddress,GeneralCallMode,Analog_Filter,CustomTiming,NoStretchMode
 Mcu.IP3=IWDG
@@ -396,6 +416,7 @@ NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 Mcu.IP12=TIM16
 Mcu.IP11=TIM1
 Dma.TIM16_CH1.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.LPUART1_RX.2.MemInc=DMA_MINC_ENABLE
 PA2.PinState=GPIO_PIN_RESET
 ADC1.Rank-2\#ChannelRegularConversion=3
 RCC.VCOInputFreq_Value=16000000
@@ -408,8 +429,9 @@ PB3.GPIOParameters=GPIO_Label
 PB7.Signal=GPIO_Output
 PB8.Locked=true
 ADC1.LowPowerAutoPowerOff=ENABLE
+Dma.LPUART1_RX.2.EventEnable=DISABLE
 VP_ADC1_Vbat_Input.Signal=ADC1_Vbat_Input
-Dma.RequestsNb=2
+Dma.RequestsNb=3
 PB6.GPIOParameters=GPIO_Label
 PB0.Locked=true
 ProjectManager.ProjectName=zumo_tb
@@ -417,6 +439,7 @@ PB7.GPIO_Label=O_L_RST_7
 ADC1.SelectedChannel=ADC_CHANNEL_0|ADC_CHANNEL_1|ADC_CHANNEL_TEMPSENSOR|ADC_CHANNEL_VREFINT|ADC_CHANNEL_VBAT
 PCC.Seq0.Step0.Oscillator=LSE BYP RTC
 PA6.Signal=GPIO_Input
+LPUART1.RXFIFOThreshold=UART_RXFIFO_THRESHOLD_1_2
 PA7.Locked=true
 PB15.GPIO_PuPd=GPIO_PULLUP
 PD5.GPIO_Label=O_FLASH_HOLD
@@ -431,6 +454,7 @@ PA10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PCC.Seq0.Step0.Duration=1 s
 PC14-OSC32_IN\ (PC14).Locked=true
 PB5.GPIO_Label=O_L_RST_5
+Dma.Request2=LPUART1_RX
 TIM16.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 Dma.Request1=TIM16_CH1
 PC4.Locked=true
@@ -440,6 +464,7 @@ PD3.GPIO_Label=O_L_RST_0
 PD6.Signal=GPIO_Output
 Dma.Request0=ADC1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
+Dma.LPUART1_RX.2.PeriphInc=DMA_PINC_DISABLE
 PA8.PinState=GPIO_PIN_RESET
 PB15.Locked=true
 PB3.Locked=true
@@ -459,6 +484,7 @@ SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,DataSi
 ADC1.ChannelVREF=ADC_CHANNEL_VREFINT
 PC11.Signal=GPIO_Input
 RCC.I2C1CLockSelection=RCC_I2C1CLKSOURCE_SYSCLK
+Dma.LPUART1_RX.2.SyncEnable=DISABLE
 PC8.Signal=GPIO_Input
 PC4.Signal=USART1_TX
 ADC1.DiscontinuousConvMode=DISABLE
@@ -480,6 +506,7 @@ TIM1.ClockDivision=TIM_CLOCKDIVISION_DIV2
 PD8.GPIO_Label=O_LEDSTRB
 PC12.GPIOParameters=GPIO_Label
 PC8.GPIO_Label=RPI_11
+Dma.LPUART1_RX.2.RequestNumber=1
 PA13.Signal=SYS_SWDIO
 PCC.Seq0.Step0.TaMax=130
 Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
@@ -527,7 +554,7 @@ VP_ADC1_Vref_Input.Signal=ADC1_Vref_Input
 PA4.GPIOParameters=GPIO_Label
 PB15.GPIOParameters=GPIO_PuPd,GPIO_Label
 ADC1.NbrOfConversion=4
-RCC.IPParameters=ADCCLockSelection,ADCFreq_Value,AHBCLKDivider,AHBFreq_Value,APBFreq_Value,APBTimFreq_Value,CECFreq_Value,CortexFreq_Value,Cortex_Div,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1CLockSelection,I2C1Freq_Value,I2S1Freq_Value,LPTIM1CLockSelection,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,RNGFreq_Value,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIM15Freq_Value,TIM1CLockSelectionVirtual,TIM1Freq_Value,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
+RCC.IPParameters=ADCCLockSelection,ADCFreq_Value,AHBCLKDivider,AHBFreq_Value,APBFreq_Value,APBTimFreq_Value,CECFreq_Value,CortexFreq_Value,Cortex_Div,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1CLockSelection,I2C1Freq_Value,I2S1Freq_Value,LPTIM1CLockSelection,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1CLockSelection,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,RNGFreq_Value,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIM15Freq_Value,TIM1CLockSelectionVirtual,TIM1Freq_Value,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32G081RBTx
 PA11\ [PA9].Signal=SPI1_MISO
@@ -569,7 +596,7 @@ VP_LPTIM1_VS_LPTIM_counterModeInternalClock.Signal=LPTIM1_VS_LPTIM_counterModeIn
 PC8.Locked=true
 RCC.Cortex_Div=SYSTICK_CLKSOURCE_HCLK_DIV8
 PC9.Signal=GPIO_Input
-TIM16.IPParameters=Channel,Prescaler,AutoReloadPreload,Period,BreakState,Pulse,ClockDivision,BreakPolarity,OCIdleState_1,OCPolarity_1
+TIM16.IPParameters=Channel,Prescaler,AutoReloadPreload,Period,BreakState,Pulse,ClockDivision,BreakPolarity,OCIdleState_1,OCPolarity_1,AutomaticOutput
 PCC.Seq0.Step0.Vdd=3.6
 PD9.Locked=true
 ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV64
