lds support in i2c driver implemented

--- a/fw/stm32/zumo_tb/zumo_tb.ioc
+++ b/fw/stm32/zumo_tb/zumo_tb.ioc
@@ -4,6 +4,7 @@ PCC.Series=STM32G0
 PB13.GPIOParameters=GPIO_Label
 PC7.GPIOParameters=GPIO_Label
 RCC.USART1Freq_Value=1000000
+PC15-OSC32_OUT\ (PC15).GPIO_Speed=GPIO_SPEED_FREQ_LOW
 ADC1.LowPowerAutoWait=DISABLE
 LPUART1.OverrunDisableParam=UART_ADVFEATURE_OVERRUN_DISABLE
 I2C1.I2C_Speed_Mode=I2C_Fast_Plus
@@ -103,7 +104,7 @@ Dma.TIM16_CH1.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 ProjectManager.HalAssertFull=false
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLINGTIME_COMMON_1
-TIM16.Pulse=4000
+TIM16.Pulse=2300
 PA0.Signal=ADC1_IN0
 RCC.TIM1Freq_Value=64000000
 PC8.GPIOParameters=GPIO_Label
@@ -150,7 +151,7 @@ VREF+.Mode=InternalMode
 RCC.PLLQoutputFreq_Value=64000000
 ProjectManager.ProjectFileName=zumo_tb.ioc
 Dma.ADC1.0.Instance=DMA1_Channel1
-PC15-OSC32_OUT\ (PC15).GPIO_Label=I_INT
+PC15-OSC32_OUT\ (PC15).GPIO_Label=O_INT
 ADC1.Rank-0\#ChannelRegularConversion=1
 PD9.GPIO_Label=O_FLASH_CS
 PA12\ [PA10].GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -206,6 +207,7 @@ Mcu.Pin56=PB9
 VP_SYS_V_PVD_IN.Signal=SYS_V_PVD_IN
 Dma.ADC1.0.SignalID=NONE
 Mcu.Pin53=PB6
+PC15-OSC32_OUT\ (PC15).GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 Mcu.Pin54=PB7
 PC6.Locked=true
 Dma.ADC1.0.Priority=DMA_PRIORITY_HIGH
@@ -382,7 +384,7 @@ PB4.GPIOParameters=GPIO_Label
 Mcu.IP0=ADC1
 Mcu.IP1=DMA
 RTC.StoreOperation=RTC_STOREOPERATION_RESET
-PC15-OSC32_OUT\ (PC15).GPIOParameters=GPIO_Label
+PC15-OSC32_OUT\ (PC15).GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 TIM1.Prescaler=10000
 SPI1.CLKPolarity=SPI_POLARITY_LOW
 Mcu.UserConstants=I2C_ADDR,0x10
@@ -493,7 +495,7 @@ RCC.EXTERNAL_CLOCK_VALUE=48000
 ProjectManager.DefaultFWLocation=true
 PD5.Signal=GPIO_Output
 PD9.Signal=GPIO_Output
-PC15-OSC32_OUT\ (PC15).Signal=GPIO_Input
+PC15-OSC32_OUT\ (PC15).Signal=GPIO_Output
 PB12.Locked=true
 ProjectManager.DeletePrevious=true
 PB10.Locked=true
@@ -536,6 +538,7 @@ board=custom
 PCC.Temperature=25
 RCC.VCOOutputFreq_Value=128000000
 ADC1.ChannelTS=ADC_CHANNEL_TEMPSENSOR
+PC15-OSC32_OUT\ (PC15).GPIO_PuPd=GPIO_PULLUP
 Dma.ADC1.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
 TIM16.Period=10000
